Update myBtn to resolve issue due to aos animation momentary white space on the right

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -339,7 +339,7 @@ iframe {
     display: none;
     position: fixed;
     bottom: 80px;
-    right: 5px;
+    left: 10px;
     z-index: 99;
     border: 1px solid rgb(255, 255, 255);
     outline: none;
